force-app/main/default/objects/Species__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <formula>IF (NOT(ISBLANK(Image_URL__c)),IMAGE(Image_URL__c, &apos;Image&apos;, 200, 200),&quot;No Image Is Captured&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image</label>
    <type>Text</type>
</CustomField>