force-app/main/default/objects/Species__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Edible</fullName>
            </value>
            <value>
                <fullName>Ornamental</fullName>
            </value>
            <value>
                <fullName>Aromatica</fullName>
            </value>
            <value>
                <fullName>Medicinal</fullName>
            </value>
            <value>
                <fullName>Culinaria</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>