force-app/main/default/objects/Species__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Descripcion__c</columns>
    <columns>Ideal_Max_Temperature__c</columns>
    <columns>Location__c</columns>
    <columns>Type__c</columns>
    <columns>Pulverization__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>